added all assets and remaining partials

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,2 +1,27 @@
-// medium green: #64A604 light green: #DDED9A
+$primary__1: #F6F6F6;
+$primary__2: #F2F2F2;
+$primary__3: #333333;
+$primary__4: #2E2E2E;
 
+$accent__1: #64A604;
+$accent__2: #DDED9A; 
+$accent__3: #EEF6D1;
+$accent__4: #252525;
+$accent__5: #474747;
+$accent__6: #535353;
+
+
+$p__text: #999999;
+
+// Colours:
+// The VERY bottom of the footer where the copyright is has a background colour 252525
+// Black (2E2E2E) is the background colour of the footer
+// Those little horizontal lines in the footer are 474747
+// Brown Grey (999999) is the colour of the footer text
+// The colour of the subscribe text box in the footer is actually 535353
+// background green colour of the hungry clients section is DDED9A
+// Those big quotes in that section are EEF6D1
+// The header text is all 000000
+// The accent grey in the contact section in the side section and the input boxes is F6F6F6
+// The quote boxes near the bottom of the blog section are EFEFEF
+// The deep green you see on the buttons and header text is 64A604
