--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,4 +2,8 @@
 @import "variables";
 @import "mixins";
 @import "header";
+@import "index";
+@import "blog";
+@import "contact";
 @import "footer";
+@import "media";
