--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -2,6 +2,7 @@ $primary__1: #F6F6F6;
 $primary__2: #F2F2F2;
 $primary__3: #333333;
 $primary__4: #2E2E2E;
+$primary__5: #EFEFEF;
 
 $accent__1: #64A604;
 $accent__2: #DDED9A; 
@@ -11,7 +12,8 @@ $accent__5: #474747;
 $accent__6: #535353;
 
 
-$p__text: #999999;
+$p__text__1: #999999;
+$p__text__2: #858585;
 
 // Colours:
 // The VERY bottom of the footer where the copyright is has a background colour 252525
