--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -4,6 +4,7 @@ footer {
     h3 {
         color: $accent__1;
         font-size: 1.5rem;
+        font-weight: 600;
     }
 
     h4 {
@@ -11,6 +12,7 @@ footer {
         font-size: 0.7rem;
         letter-spacing: 1px;
         margin-bottom: 40px;
+        font-weight: 600;
     }
 
     p {
@@ -29,7 +31,7 @@ footer {
         margin: 0;
         font-size: 0.58rem;
         font-weight: 400;
-        color: $p__text;
+        color: $p__text__1;
         letter-spacing: 0.5px;
         text-decoration: none;
         padding-bottom: 10px;
@@ -48,7 +50,7 @@ footer {
 
     input {
         background-color: $accent__6;
-        color: $p__text;
+        color: $p__text__1;
         border: none;
         font-size: 0.58rem;
         font-family: "Lora", sans-serif;
@@ -93,6 +95,7 @@ a.no__border,
 p.no__border {
     border-bottom: none;
     padding-bottom: 0;
+    margin-bottom: -5px;
 }
 
 .footer__social ul {
