--- a/styles/style.css
+++ b/styles/style.css
@@ -904,3 +904,133 @@ hr {
   font-weight: 600;
   padding: 15px 30px 15px 20px;
 }
+
+.contact__main h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 90px;
+  margin-bottom: 30px;
+}
+
+.contact__main img {
+  width: 100%;
+  height: 500px;
+  margin-bottom: -7px;
+}
+
+.contact__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1800px;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.contact__form {
+  width: 68%;
+  margin-right: 2%;
+}
+
+.contact__form .contact__page__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contact__form input,
+.contact__form textarea {
+  border: none;
+  background-color: #F2F2F2;
+  font-family: "Lora", serif;
+  font-size: 0.58rem;
+  padding: 15px;
+  margin-bottom: 25px;
+}
+
+.contact__form input[name="name"] {
+  width: 48%;
+  margin-right: 1.5%;
+}
+
+.contact__form input[name="email"] {
+  width: 48%;
+  margin-left: 1.5%;
+}
+
+.contact__form input[name="subject"] {
+  width: 100%;
+}
+
+.contact__form textarea {
+  resize: none;
+  width: 100%;
+  height: 200px;
+}
+
+.contact__form button {
+  background-color: white;
+  color: #64A604;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.58rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.contact__details {
+  width: 27%;
+  margin-left: 3%;
+  background-color: #F2F2F2;
+  position: relative;
+  padding-bottom: 40px;
+}
+
+.contact__details h3 {
+  font-size: 0.7rem;
+  font-weight: 600;
+  margin-top: 55px;
+}
+
+.contact__details p {
+  font-size: 0.56rem;
+}
+
+.contact__details p span {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  color: #333333;
+}
+
+.contact__details .lighter__text {
+  color: #999999;
+}
+
+.contact__details .italic__text {
+  font-style: italic;
+}
+
+.contact__details .less__line__height {
+  line-height: 1.1;
+}
+
+.contact__details .more__line__height {
+  line-height: 2.5;
+}
+
+.contact__details::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 233%;
+  background-color: #F2F2F2;
+  top: 0px;
+  left: -25px;
+  z-index: -1;
+}
