--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -1,7 +1,6 @@
 .contact__main {
     h2 {
-        font-size: 1rem;
-        font-weight: 600;
+        @include font(1rem, 600);
         margin-top: 90px;
         margin-bottom: 30px;
     }
@@ -30,6 +29,7 @@
 
     input,
     textarea {
+        @include input(none, 0.58rem);
         border: none;
         background-color: $primary__2;
         font-family: "Lora", serif;
@@ -53,20 +53,11 @@
     }
 
     textarea {
-        resize: none;
-        width: 100%;
-        height: 200px;
+        @include textarea(200px);
     }
 
     button {
-        background-color: white;
-        color: $accent__1;
-        text-transform: uppercase;
-        font-family: "Raleway", sans-serif;
-        font-size: 0.58rem;
-        border: none;
-        cursor: pointer;
-        font-weight: 600;
+        @include button(white, $accent__1, 0.58rem);
         letter-spacing: 0.5px;
     }
 }
@@ -79,8 +70,7 @@
     padding-bottom: 40px;
     
     h3 {
-        font-size: 0.7rem;
-        font-weight: 600;
+        @include font(0.7rem, 600);
         margin-top: 55px;
     }
 
