--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -14,11 +14,10 @@
     }
 
     h5 {
+        @include font(0.6rem, 600);
         text-transform: uppercase;
         font-family: "Raleway", sans-serif;
         color: $primary__4;
-        font-size: 0.6rem;
-        font-weight: 600;
     }
 }
 
@@ -84,6 +83,7 @@
 
     img {
         width: 15%;
+        align-self: center;
     }
 
     .bio__text {
@@ -159,17 +159,15 @@
     }
 
     h6 {
+        @include font(0.58rem, 600);
         margin: 0;
         font-family: "Raleway", sans-serif;
-        font-weight: 600;
-        font-size: 0.58rem;
         color: $primary__4;
         padding-bottom: 4px;
 
         span {
+            @include font(0.55rem, 400);
             font-family: "Lora", serif;
-            font-weight: 400;
-            font-size: 0.55rem;
         }
     }
 
@@ -181,9 +179,8 @@
     }
 
     .comment__timestamp {
+        @include font(0.5rem, 600);
         font-family: "Raleway", sans-serif;
-        font-size: 0.5rem;
-        font-weight: 600;
         padding-top: 3px;
     }
 
@@ -203,12 +200,10 @@
         color: $p__text__1;
 
         input {
+            @include input(2px solid $primary__2, 0,58rem);
             width: 32%;
             margin-right: 2%;
             margin-bottom: 15px;
-            border: 2px solid $primary__2;
-            font-family: "Lora", serif;
-            font-size: 0.58rem;
             padding: 10px;
         }
 
@@ -217,9 +212,7 @@
         }
 
         textarea {
-            width: 100%;
-            height: 150px;
-            resize: none;
+            @include textarea(150px);
             border: 2px solid $primary__2;
             font-family: "Lora", serif;
             font-size: 0.58rem;
@@ -228,13 +221,7 @@
         }
 
         button {
-            border: 1px solid $accent__1;
-            background-color: $accent__1;
-            color: $primary__1;
-            text-transform: uppercase;
-            font-family: "Raleway", sans-serif;
-            font-size: 0.6rem;
-            font-weight: 600;
+            @include button($accent__1, $primary__1, 0.6rem);
             padding: 15px 30px 15px 20px;
         }
     }
